Fix name file .cpp in Makefile

--- a/examples/codesByTopic/anechoicDynamicsMRT3D/Makefile
+++ b/examples/codesByTopic/anechoicDynamicsMRT3D/Makefile
@@ -17,7 +17,7 @@
 # Leading directory of the Palabos source code
 palabosRoot  = ../../..
 # Name of source files in current directory to compile and link with Palabos
-projectFiles = anechoic_dynamics3D.cpp
+projectFiles = anechoic_dynamicsMRT3D.cpp
 
 # Set optimization flags on/off
 optimize     = true
